# genius-galaxy

./: .gitignore  README.md
client/: .gitignore  README.md  next.config.ts  package.json  tsconfig.json
client/app/: canvas.tsx  layout.tsx  page.tsx
client/components/ui/: Dropdown.tsx
client/hooks/: useDropdownStore.tsx  useUserStore.tsx
server/: README.md  main.py  pyproject.toml
server/app/: main.py
