[project]
name = "server"
version = "0.0.0.1"
description = ""
authors = [
    {name = "Quentin DI MEO",email = "q.dimeo@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard] (>=0.121.0,<0.122.0)",
    "uvicorn[standard] (>=0.38.0,<0.39.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "sqlmodel (>=0.0.27,<0.0.28)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)"
]
